# personal-assistant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: data.db  introduction.txt
src/: cli.yml  database.rs  main.rs  note.rs  setup.rs  tasks.rs
src/static/: cli.yml  config.json  introduction.txt  schema.sql
src/tasks/: note.rs  quote.rs  save.rs  timer.rs  todo.rs  weather.rs
