[package]
name = "pat"
version = "0.1.0"
authors = ["ankit saini <ankitsaini100205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^2.33.0", features= ["yaml"]}
chrono = "0.4"
sqlx ={ version = "0.3", default-features= false, features = [ "runtime-tokio", "macros", "sqlite" ] }
tokio = { version = "0.2", features = ["full"] }
