[package]
name = "pat"
version = "0.1.0"
authors = ["ankit saini <ankitsaini100205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "^2.33.0", features= ["yaml"]}
chrono = "0.4"
sqlx ={ version = "0.3", default-features= false, features = [ "runtime-tokio", "macros", "sqlite" ] }
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
text_io = "0.1.8"

# requires libasound2-dev to compile
# can be installed using `sudo apt-get install libasound2-dev` on ubuntu
rodio = "0.11.0"

